# leiot_sdk

./: .gitignore  CMakeLists.txt  README  README.md  env.sh
cmake/: CMakeLists.txt
cmake/devices/: Gateway.cmake  MiniControl.cmake  Subdev.cmake
cmake/modules/: ConfigPreAndPost.cmake  DownloadCodes.cmake  InternalFuncs.cmake  InternalFunctions.cmake  SetEnv.cmake
include/: iot_import.h
include/exports/: iot_export_mqtt.h  iot_export_shadow.h
sample/: CMakeLists.txt
sample/device-shadow/: CMakeLists.txt  shadow-control-example.c  shadow-example.c
sample/mqtt/: CMakeLists.txt  mqtt_rrpc-example.c  test_mqtt_main.c
script/: make_sdk_package.sh  make_standalone_toolchain.sh
src/: CMakeLists.txt
src/devices/: CMakeLists.txt
src/guider/: CMakeLists.txt  guider.c  guider_internal.h
src/mqtt-client/: CMakeLists.txt  MQTTClient.c  MQTTClient.h  mqtt_client.c
src/ota/: CMakeLists.txt
src/platform/: CMakeLists.txt
src/platform/os/android/: HAL_OS_android.c  HAL_TCP_android.c
src/platform/ssl/mbedtls/: HAL_TLS_mbedtls.c
src/sdk-impl/: CMakeLists.txt  sdk-impl.c
src/shadow/: CMakeLists.txt  shadow.c  shadow_common.c  shadow_common.h  shadow_delta.c  shadow_update.c
src/subdev/: CMakeLists.txt
src/system/: CMakeLists.txt  ca.c  device.c  device.h
src/tls/: CMakeLists.txt
src/utils/: CMakeLists.txt  utils_sha1.c  utils_sha1.h
src/utils/log/: lite-log.c
src/utils/misc/: utils_net.c  utils_net.h
