# This is a cmake script.

CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

IF (WIN32)
    MESSAGE (FATAL_ERROR "Compiling is only Supported on Linux OS!")
ENDIF ()

PROJECT (leiot C)

SET (CMAKE_C_COMPILER_WORKS 1)
SET (EXECUTABLE_OUTPUT_PATH ${leiot_BINARY_DIR}/bin)
SET (LIBRARY_OUTPUT_PATH    ${leiot_BINARY_DIR}/lib)

SET (PROJECT_TOP_DIR ${CMAKE_CURRENT_LIST_DIR})
SET (PROJECT_MOD_DIR ${PROJECT_TOP_DIR}/cmake)

# Setup version and gen timestamp
SET (VERSION "1.0.1")
EXECUTE_PROCESS (COMMAND date "+%Y%m%d%H%M%S"
    OUTPUT_VARIABLE TIMESTAMP     
    OUTPUT_STRIP_TRAILING_WHITESPACE
    )

LIST (APPEND DEFINITIONS 
    -DBUILD_VERSION=${VERSION}
    -DBUILD_TIMESTAMP=${TIMESTAMP}
    )
SET (LEIOT_BUILD_VERSION "${VERSION}-${TIMESTAMP}" CACHE STRING "Build version Info")

# Generate configure file
SET (LEIOT_CONFIG_FILE ${PROJECT_TOP_DIR}/leiot_config.h)
FILE (WRITE  ${LEIOT_CONFIG_FILE} "#ifndef _LEIOT_CONFIG_H_\n")
FILE (APPEND ${LEIOT_CONFIG_FILE} "#define _LEIOT_CONFIG_H_\n\n")
FILE (APPEND ${LEIOT_CONFIG_FILE} "#define ${BUILD_VERSION} \"${VERSION}\"\n")
FILE (APPEND ${LEIOT_CONFIG_FILE} "#define ${BUILD_TIMESTAMP} \"${TIMESTAMP}\"\n")

# Setup module path
SET (CMAKE_MODULE_PATH 
    ${CMAKE_MODULE_PATH}
    "${PROJECT_TOP_DIR}/cmake"
    "${PROJECT_TOP_DIR}/cmake/modules"
    )
INCLUDE (${PROJECT_TOP_DIR}/cmake/CMakeLists.txt OPTIONAL)

# Setup leiot sdk
SET (LEIOT_SDK_NAME sdk_${LEIOT_DEVICE_TYPE})
LIST (APPEND LEIOT_INCLUDES 
    ${PROJECT_TOP_DIR}
    )

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(sample)

FILE (APPEND ${LEIOT_CONFIG_FILE} "#endif\n")
