# This is a cmake script.

CMAKE_MINIMUM_REQUIRED (VERSION 2.8.12)

IF (WIN32)
    MESSAGE (FATAL_ERROR "Compiling is only Supported on Linux OS!")
ENDIF ()

PROJECT (leiot C)

SET (CMAKE_C_COMPILER_WORKS 1)
SET (PROJECT_TOP_DIR        ${CMAKE_CURRENT_LIST_DIR})
SET (PROJECT_OUTPUT_PATH    ${leiot_BINARY_DIR})
SET (EXECUTABLE_OUTPUT_PATH ${leiot_BINARY_DIR}/bin)
SET (LIBRARY_OUTPUT_PATH    ${leiot_BINARY_DIR}/lib)
SET (PROJECT_MOD_DIR        ${PROJECT_TOP_DIR}/cmake)
SET (PROJECT_EXTERNAL_DIR   ${PROJECT_TOP_DIR}/external)
SET (PROJECT_SCRIPT_DIR     ${PROJECT_TOP_DIR}/script)

# Setup module path
SET (CMAKE_MODULE_PATH
    ${CMAKE_MODULE_PATH}
    "${PROJECT_TOP_DIR}/cmake"
    "${PROJECT_TOP_DIR}/cmake/modules"
    )
INCLUDE (${PROJECT_TOP_DIR}/cmake/CMakeLists.txt OPTIONAL)

# Set Global variable for access
LEIOT_REGISTER_GLOBAL_PROPERTIES (
    GLOBAL_LINKS_DIR
    GLOBAL_INCLUDE_DIR
    GLOBAL_STATIC_LIBS
    GLOBAL_SHARED_LIBS
    GLOBAL_DEFINITIONS
    GLOBAL_COMPILE_FLAGS
    )

# Setup build info configure file
SET (LEIOT_CONFIG_H ${leiot_BINARY_DIR}/leiot_config.h)

# Setup version
SET (LEIOT_VERSION_MAJOR 1)
SET (LEIOT_VERSION_MINOR 0)
SET (LEIOT_VERSION_PATCH 0)
SET (LEIOT_SDK_VERSION ${LEIOT_VERSION_MAJOR}.${LEIOT_VERSION_MINOR}.${LEIOT_VERSION_PATCH})

LEIOT_CONFIG_PRE (${LEIOT_CONFIG_H})

# Global include directories
INCLUDE_DIRECTORIES (
    ${leiot_BINARY_DIR}
    ${PROJECT_TOP_DIR}/include
    ${PROJECT_TOP_DIR}/include/imports
    ${PROJECT_TOP_DIR}/include/exports
    )

# Set global platform properties
ADD_COMPILE_OPTIONS (${PLATFORM_CFLAGS})
INCLUDE_DIRECTORIES (${PLATFORM_INCLUDE_DIR})
LINK_DIRECTORIES (${PLATFORM_LINKS_DIR})
LINK_LIBRARIES (${PLATFORM_LDFLAGS} ${PLATFORM_SHARED_LIBS} ${PLATFORM_STATIC_LIBS})
ADD_DEFINITIONS (${PLATFORM_DEFINITIONS})

ADD_SUBDIRECTORY (external)
ADD_SUBDIRECTORY (src)
ADD_SUBDIRECTORY (sample)

LEIOT_CONFIG_POST(${LEIOT_CONFIG_H})
