# cmake/CMakeLists.txt

# Debug cmake flag
SET (LEIOT_CMAKE_DEBUG 1)

INCLUDE (SetEnv)
INCLUDE (InternalFuncs)
INCLUDE (ConfigPreAndPost)

# Debug
IF (NOT LEIOT_ENABLE_DEBUG STREQUAL "ON")
    SET (CMAKE_BUILD_TYPE Release CACHE STRING "Set build type" FORCE)
ELSE ()
    SET (CMAKE_BUILD_TYPE Debug CACHE STRING "Set build type" FORCE)
    ADD_DEFINITIONS ("-DENABLE_DEBUG=1")
ENDIF ()

IF (LEIOT_CLOUD_SERVER STREQUAL "tencent")
    SET (ENABLE_TENCENT_CLOUD ON)
    ADD_DEFINITIONS ("-DENABLE_TENCENT_CLOUD")
ELSEIF (LEIOT_CLOUD_SERVER STREQUAL "local")
    SET (ENABLE_LOCAL_CLOUD ON)
    ADD_DEFINITIONS ("-DENABLE_LOCAL_CLOUD")
ELSE ()
ENDIF ()

# Library type
IF (NOT LEIOT_LIBS_STATIC STREQUAL "OFF")
    OPTION (LEIOT_ENABLE_STATIC "Build libraries static." ON)
ELSE ()
    OPTION (LEIOT_ENABLE_STATIC "Build libraries static." OFF)
ENDIF ()

# OS Platform
LEIOT_INCLUDE (platforms/${LEIOT_OS_PLATFORM}.cmake)

# Setup Compiling
SET (CMAKE_C_COMPILER   "${LEIOT_CROSS_PREFIX}gcc")
SET (CMAKE_CXX_COMPILER "${LEIOT_CROSS_PREFIX}g++")
SET (CMAKE_AR           "${LEIOT_CROSS_PREFIX}ar")
SET (CMAKE_STRIP        "${LEIOT_CROSS_PREFIX}strip")
SET (CMAKE_LINKER       "${LEIOT_CROSS_PREFIX}ld")
SET (CMAKE_NM           "${LEIOT_CROSS_PREFIX}nm")
SET (CMAKE_OBJCOPY      "${LEIOT_CROSS_PREFIX}objcopy")
SET (CMAKE_OBJDUMP      "${LEIOT_CROSS_PREFIX}objdump")
SET (CMAKE_RANLIB       "${LEIOT_CROSS_PREFIX}ranlib")
