# CMakeLists.txt

IF (NOT LEIOT_ENABLE_STATIC)
    ADD_COMPILE_OPTIONS ("-fPIC")
ENDIF ()

INCLUDE (${CMAKE_CURRENT_LIST_DIR}/tls/CMakeLists.txt)
INCLUDE (${CMAKE_CURRENT_LIST_DIR}/ota/CMakeLists.txt)
INCLUDE (${CMAKE_CURRENT_LIST_DIR}/guider/CMakeLists.txt)
INCLUDE (${CMAKE_CURRENT_LIST_DIR}/shadow/CMakeLists.txt)
INCLUDE (${CMAKE_CURRENT_LIST_DIR}/security/CMakeLists.txt)
INCLUDE (${CMAKE_CURRENT_LIST_DIR}/mqtt-client/CMakeLists.txt)
INCLUDE (${CMAKE_CURRENT_LIST_DIR}/tcp-client/CMakeLists.txt)
INCLUDE (${CMAKE_CURRENT_LIST_DIR}/udp-client/CMakeLists.txt)
INCLUDE (${CMAKE_CURRENT_LIST_DIR}/access/CMakeLists.txt)
INCLUDE (${CMAKE_CURRENT_LIST_DIR}/import/CMakeLists.txt)
INCLUDE (${CMAKE_CURRENT_LIST_DIR}/platform/CMakeLists.txt)
INCLUDE (${CMAKE_CURRENT_LIST_DIR}/system/CMakeLists.txt)
INCLUDE (${CMAKE_CURRENT_LIST_DIR}/devices/CMakeLists.txt)
INCLUDE (${CMAKE_CURRENT_LIST_DIR}/utils/CMakeLists.txt)

# Remove duplicated files
LIST (REMOVE_DUPLICATES LEIOT_C_SOURCES)
LIST (REMOVE_DUPLICATES LEIOT_INCLUDES)
LIST (REMOVE_DUPLICATES LEIOT_LIBRARIES)
LIST (REMOVE_DUPLICATES LEIOT_DEFINITIONS)

IF (NOT LEIOT_ENABLE_STATIC)
    ADD_LIBRARY (${LEIOT_SDK_NAME} SHARED ${LEIOT_C_SOURCES})
ELSE ()
    ADD_LIBRARY (${LEIOT_SDK_NAME} STATIC ${LEIOT_C_SOURCES})
ENDIF ()

# Add the include directories to the INCLUDE_DIRECTORIES
INCLUDE_DIRECTORIES (${LEIOT_INCLUDES})

# Add the definitions to the ADD_DEFINITIONS
ADD_DEFINITIONS (${LEIOT_DEFINITIONS})

# Add the libraries to the TARGET_
TARGET_LINK_LIBRARIES (${LEIOT_SDK_NAME} ${LEIOT_LIBRARIES})

# Debug
LEIOT_COMPILE_INFO (${LEIOT_SDK_NAME})
