# sample/device-shadow/CMakeLists.txt

SET (LEIOT_SAMPLE_NAME shadow-example) 

LEIOT_GLOBAL_GET (GLOBAL_STATIC_LIBS)
LEIOT_GLOBAL_GET (GLOBAL_SHARED_LIBS)

ADD_EXECUTABLE (${LEIOT_SAMPLE_NAME} shadow-example.c)

IF (GLOBAL_STATIC_LIBS)
    TARGET_LINK_LIBRARIES (${LEIOT_SAMPLE_NAME} -Wl,--start-group ${GLOBAL_STATIC_LIBS} -Wl,--start-group)
ENDIF ()

IF (GLOBAL_SHARED_LIBS)
    TARGET_LINK_LIBRARIES (${LEIOT_SAMPLE_NAME} ${GLOBAL_SHARED_LIBS})
ENDIF ()

# Debug
LEIOT_COMPILE_INFO (${LEIOT_SAMPLE_NAME})
