# mqtt demo

SET (DEMO_MQTT_NAME "test_mqtt")

GET_PROPERTY (LEIOT_INCLUDES GLOBAL PROPERTY GLOBAL_INCLUDES)
FOREACH (INC ${LEIOT_INCLUDES})
    INCLUDE_DIRECTORIES (${INC})
ENDFOREACH (INC)

LIST (APPEND DEMO_MQTT_SOURCE 
    test_mqtt_main.c 
    )

ADD_EXECUTABLE (${DEMO_MQTT_NAME} ${DEMO_MQTT_SOURCE})

TARGET_LINK_LIBRARIES (${DEMO_MQTT_NAME} ${LEIOT_SDK_NAME})
