# sample/mqtt/CMakeLists.txt

SET (RRPC_SAMPLE_NAME mqtt_rrpc-example)

LEIOT_GLOBAL_GET (GLOBAL_STATIC_LIBS)
LEIOT_GLOBAL_GET (GLOBAL_SHARED_LIBS)

ADD_EXECUTABLE (${RRPC_SAMPLE_NAME} mqtt_rrpc-example.c)

IF (GLOBAL_STATIC_LIBS)
    TARGET_LINK_LIBRARIES (${RRPC_SAMPLE_NAME} -Wl,--start-group ${GLOBAL_STATIC_LIBS} -Wl,--end-group)
ENDIF ()

IF (GLOBAL_SHARED_LIBS)
    TARGET_LINK_LIBRARIES (${RRPC_SAMPLE_NAME} ${GLOBAL_SHARED_LIBS})
ENDIF ()

# Debug
LEIOT_TARGET_COMPILE_INFO (${RRPC_SAMPLE_NAME})
