# CMakeLists.txt

IF (NOT LEIOT_ENABLE_MQTT)
    RETURN ()
ENDIF (NOT LEIOT_ENABLE_MQTT)

############## Sub Module MQTT ###############
SET (MODULE_MQTT_NAME mqtt)

FILE (GLOB_RECURSE MQTT_C_SOURCES "${CMAKE_CURRENT_LIST_DIR}/MQTTPacket*.c")

ADD_LIBRARY (${MODULE_MQTT_NAME} ${MQTT_C_SOURCES})

SET_TARGET_PROPERTIES (${MODULE_MQTT_NAME} PROPERTIES 
    COMPILE_FLAGS "-DLEIOT_ENABLE"
    )
############## Sub Module MQTT ###############

LIST (APPEND LEIOT_INCLUDES
    ${CMAKE_CURRENT_LIST_DIR}
    ${CMAKE_CURRENT_LIST_DIR}/MQTTPacket
    )

LIST (APPEND LEIOT_DEFINITIONS
    "-DLEIOT_ENABLE_MQTT"
    )

LIST (APPEND LEIOT_LIBRARIES
    ${MODULE_MQTT_NAME}
    )

LIST (APPEND LEIOT_C_SOURCES 
    ${CMAKE_CURRENT_LIST_DIR}/MQTTClient.c
    )
