# platform/CMakeLists.txt

STRING (TOLOWER ${LEIOT_OS_PLATFORM} VENDOR)

IF (NOT EXISTS ${CMAKE_CURRENT_LIST_DIR}/os/${VENDOR})
    MESSAGE (FATAL_ERROR "Not impl HAL in ${CMAKE_CURRENT_LIST_DIR}/os/${VENDOR}")
ENDIF ()

SET (MODULE_PLATFORM_NAME "leiot_platform")

FILE (GLOB_RECURSE PLATFORM_C_SOURCES "${CMAKE_CURRENT_LIST_DIR}/os/${VENDOR}/*.c")

IF (LEIOT_ENABLE_TLS)
    IF (LEIOT_ENABLE_COAP)
        LIST (APPEND PLATFORM_C_SOURCES ${CMAKE_CURRENT_LIST_DIR}/ssl/mbedtls/HAL_DTLS_mbedtls.c)
    ENDIF ()
    LIST (APPEND PLATFORM_C_SOURCES ${CMAKE_CURRENT_LIST_DIR}/ssl/mbedtls/HAL_TLS_mbedtls.c)
ENDIF ()

ADD_LIBRARY (${MODULE_PLATFORM_NAME} STATIC ${PLATFORM_C_SOURCES})

LIST (APPEND LEIOT_STATIC_LIBS ${MODULE_PLATFORM_NAME})

# Debug
LEIOT_TARGET_COMPILE_INFO (${MODULE_PLATFORM_NAME})
