# TLS CMakeLists.txt

IF (NOT LEIOT_ENABLE_TLS)
    RETURN ()
ENDIF (NOT LEIOT_ENABLE_TLS)

############## Sub Module TLS ###############
SET (MODULE_TLS_NAME mbedtls) 

FILE (GLOB_RECURSE TLS_C_SOURCES "${CMAKE_CURRENT_LIST_DIR}/*.c") 

ADD_LIBRARY (${MODULE_TLS_NAME} ${TLS_C_SOURCES})

SET_TARGET_PROPERTIES (${MODULE_TLS_NAME} PROPERTIES 
    COMPILE_FLAGS "-DLEIOT_ENABLE"
    )
############## Sub Module TLS ###############

LIST (APPEND LEIOT_INCLUDES
    ${CMAKE_CURRENT_LIST_DIR}/include
    )

LIST (APPEND LEIOT_DEFINITIONS
    "-DLEIOT_ENABLE_TLS"
    )

LIST (APPEND LEIOT_LIBRARIES
    ${MODULE_TLS_NAME}
    )
