# CMakeLists.txt

SET (MODULE_UTILS_NAME "leiot_utils")

FILE (GLOB_RECURSE UTILS_C_SOURCES "${CMAKE_CURRENT_LIST_DIR}/*.c")
LIST (REMOVE_ITEM UTILS_C_SOURCES "${CMAKE_CURRENT_LIST_DIR}/lite-utils_prog.c")

ADD_LIBRARY (${MODULE_UTILS_NAME} STATIC ${UTILS_C_SOURCES})
TARGET_COMPILE_OPTIONS (${MODULE_UTILS_NAME} PRIVATE ${PLATFORM_CFLAGS})

LIST (APPEND LEIOT_STATIC_LIBS ${MODULE_UTILS_NAME})
LIST (APPEND LEIOT_INCLUDES ${CMAKE_CURRENT_LIST_DIR})

# Debug
LEIOT_COMPILE_INFO (${MODULE_UTILS_NAME})
