# CMakeLists.txt

SET (MODULE_UTILS_NAME "leiot_utils")

FILE (GLOB_RECURSE UTILS_C_SOURCES "${CMAKE_CURRENT_LIST_DIR}/*.c")
LIST (REMOVE_ITEM UTILS_C_SOURCES 
    ${CMAKE_CURRENT_LIST_DIR}/lite-utils_prog.c
    ${CMAKE_CURRENT_LIST_DIR}/lite-utils_testsuites.c
    )

ADD_LIBRARY (${MODULE_UTILS_NAME} STATIC ${UTILS_C_SOURCES})
TARGET_INCLUDE_DIRECTORIES (${MODULE_UTILS_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/log)

LIST (APPEND LEIOT_STATIC_LIBS ${MODULE_UTILS_NAME})
LIST (APPEND LEIOT_INCLUDES 
    ${CMAKE_CURRENT_LIST_DIR}
    ${CMAKE_CURRENT_LIST_DIR}/digest
    ${CMAKE_CURRENT_LIST_DIR}/log
    ${CMAKE_CURRENT_LIST_DIR}/misc
    )

# Temp put it here for subdev example
IF (LEIOT_ENABLE_SUBDEV)
    LEIOT_GLOBAL_APPEND (GLOBAL_INCLUDE_DIR 
        ${CMAKE_CURRENT_LIST_DIR}
        ${CMAKE_CURRENT_LIST_DIR}/log
        )
ENDIF ()

# Debug
LEIOT_TARGET_COMPILE_INFO (${MODULE_UTILS_NAME})
